specifying node version in json file

--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "dfamv2-frontend",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "12.1.0"
+  },
   "dependencies": {
     "moment": "^2.24.0",
     "react": "^16.8.6",
